[gd_scene load_steps=6 format=3 uid="uid://ly8e2k6vbbgo"]

[ext_resource type="Texture2D" uid="uid://d2go8brrbpv68" path="res://images/ability_tree/789_Lorc_RPG_icons/Icon.2_77.png" id="1_udud3"]
[ext_resource type="FontFile" uid="uid://bmnypigf4h1l8" path="res://font/dogica/OTF/dogica.otf" id="2_0bcsa"]
[ext_resource type="Script" path="res://scripts/passive_skil_node.gd" id="2_sigri"]

[sub_resource type="LabelSettings" id="LabelSettings_u6r5c"]
font = ExtResource("2_0bcsa")
font_size = 80

[sub_resource type="LabelSettings" id="LabelSettings_8lbgd"]
font = ExtResource("2_0bcsa")
font_size = 85

[node name="PassiveSkilNode" type="TextureButton" groups=["PassiveSkillNode"]]
offset_right = 400.0
offset_bottom = 400.0
scale = Vector2(0.15, 0.15)
texture_normal = ExtResource("1_udud3")
script = ExtResource("2_sigri")
skill_id = "1d"

[node name="Level" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.148
anchor_bottom = 0.157
offset_left = 86.0
offset_top = 410.0
offset_right = 236.8
offset_bottom = 412.2
text = "1/3"
label_settings = SubResource("LabelSettings_u6r5c")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = -293.0
offset_top = -213.0
offset_right = 753.0
offset_bottom = 7.0
label_settings = SubResource("LabelSettings_8lbgd")
horizontal_alignment = 1
autowrap_mode = 3

[node name="PathVertice" type="Node2D" parent="."]
position = Vector2(200, 193.333)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
